manifest/observability/monitoring/nightingale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nightingale
  namespace: monitoring
  labels:
    app.kubernetes.io/name: nightingale
spec:
  ports:
    - name: http
      port: 17000
      targetPort: 17000
  selector:
    app.kubernetes.io/name: nightingale
